<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:key="agenda_enabled"
        android:title="@string/pref_agenda_enabled"
        android:summary="@string/pref_agenda_enabled_summary"
        android:defaultValue="true" />
    <SwitchPreferenceCompat
        android:key="agenda_on_gesture"
        android:title="@string/pref_agenda_on_gesture"
        android:summary="@string/pref_agenda_on_gesture_summary"
        android:defaultValue="false"
        android:dependency="agenda_enabled" />
    <ListPreference
        android:key="agenda_days"
        android:title="@string/pref_agenda_days"
        android:entries="@array/agenda_days_entries"
        android:entryValues="@array/agenda_days_values"
        android:defaultValue="7"
        android:dependency="agenda_enabled"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:key="agenda_tap"
        android:title="@string/pref_agenda_tap"
        android:entries="@array/agenda_tap_entries"
        android:entryValues="@array/agenda_tap_values"
        android:defaultValue="inline"
        android:dependency="agenda_enabled"
        app:useSimpleSummaryProvider="true" />
    <Preference
        android:key="agenda_calendars"
        android:title="@string/pref_agenda_calendars"
        android:summary="@string/pref_agenda_calendars_summary"
        android:dependency="agenda_enabled" />
    <ListPreference
        android:key="agenda_lines"
        android:title="@string/pref_agenda_lines"
        android:entries="@array/agenda_lines_entries"
        android:entryValues="@array/agenda_lines_values"
        android:defaultValue="6"
        android:dependency="agenda_enabled"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:key="agenda_text_size"
        android:title="@string/pref_agenda_text_size"
        android:entries="@array/agenda_text_entries"
        android:entryValues="@array/agenda_text_values"
        android:defaultValue="medium"
        android:dependency="agenda_enabled"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreferenceCompat
        android:key="agenda_all_day"
        android:title="@string/pref_agenda_all_day"
        android:summary="@string/pref_agenda_all_day_summary"
        android:defaultValue="true"
        android:dependency="agenda_enabled" />
    <SwitchPreferenceCompat
        android:key="agenda_countdown"
        android:title="@string/pref_agenda_countdown"
        android:summary="@string/pref_agenda_countdown_summary"
        android:defaultValue="true"
        android:dependency="agenda_enabled" />
</PreferenceScreen>
